--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/index.css">
   <title>Document</title>
 </head>
 
 <body>
-
+  <header>
+    <h1>CatApp</h1>
+  </header>
+  <main>
+    <article class="images-random">
+      Cat Image
+    </article>
+  </main>
+  <script src="/index.js"></script>
 </body>
 
 </html>
