--- a/index.html
+++ b/index.html
@@ -6,27 +6,72 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/app.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <title>Document</title>
 </head>
 
 <body>
-  <header>
-    <h1>CatApp</h1>
-  </header>
-  <main>
+  <div class="container ">
+
+    <nav class="navbar navbar-expand-lg bg-dark text-white" id="container-nav">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#home">Navbar</a>
+        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon bg-light"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto" id="container-links">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#favourites">Favourite Cats</a>
+            </li>
+            <li class="nav-item dropdown">
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <main class="main">
     <article class="images-random-container">
       <img id="random-cat" alt="CatImage" height="300px">
     </article>
+
+    <section class="button-stack">
+
+      <button id="upLoadButton" type="button" class="btn btn-outline-secondary">upload</button><button id="addFavorite"
+        type="button" class="btn btn-outline-secondary inactive">Add To Favourites</button>
+    </section>
+    <section class="titleFav">
+      <h2>Favourites Cats</h2>
+    </section>
+    <article class="containerFavourites container">
+    </article>
   </main>
-
-  <section class="button-stack">
-
-    <button id="uploadButton">upload</button><button id="addFavorite">add to favorites</button>
-  </section>
-  <article class="containerFavourites">
-    <h2>Fav Cats</h2>
-  </article>
+  <footer class="bg-dark">
+    <div class="container">
+      <div class="row main-footer">
+        <div class="col developed">
+          <h6>Developed by Ernesto Pichardo</h6>
+        </div>
+        <div class="col github">
+          <a href="https://github.com/pichar376" class="git-ancord ml-auto">my github site</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  </div>
   <script src="./src/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <script src="./src/nodes.js"></script>
+  <script src="./src/routes/routes.js"></script>
+
 </body>
 
 </html>
