--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </main>
   </div>
   <footer class="bg-dark container">
-    <p>Developed Ernesto Pichardo</p>
+    <p>Developed Ernesto Pich</p>
   </footer>
   <script src="./src/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
